2006-09-28  Wouter Bolsterlee  <wbolster@gnome.org>

	* translation-status.xml: deskbar-applet branched.

2006-09-25  Abel Cheung  <abel@oaka.org>

	* translation-status.xml: gnome-icon-theme and metacity branched.

2006-09-13  Abel Cheung  <abel@oaka.org>

	* translation-status.xml: Totem has branched for gnome-2.16

2006-09-08  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* translation-status.xml: Added slab module.

2006-09-07  Wouter Bolsterlee  <uws+gnome@xs4all.nl>

	* translation-status.xml: Zenity and EOG have branched.

2006-09-06  Abel Cheung  <abel@oaka.org>

	* translation-status.xml: Set correct branch for all gnome 2.16
	modules so far.

2006-09-03  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: Move tomboy from proposed to desktop.

2006-08-23  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: Branch g-p-m, glib, gtk+.

2006-08-17  Danilo Šegan  <danilo@gnome.org>

	* translation-status.xml: Use gnome-2-14 branch for gnome-system-tools.

2006-08-15  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: We should concentrate on epiphany-extesions
	HEAD branch.

2006-08-14  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected Evince POT name.

2006-08-12  Tommi Vainikainen  <thv@iki.fi>

	* translation-status.xml: Fixed dasher branch for GNOME 2.16 as
	per http://mail.gnome.org/archives/desktop-devel-list/2006-July/msg00821.html.

2006-08-12  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: Corrected Evince POT name.

2006-08-07  Todd Kulesza  <todd@dropline.net>

	* translation-status.xml: Drivel development is continuing
	on CVS HEAD.
	
2006-08-07  Christian Rose  <menthos@menthos.com>

	* translation-status.xml: Added atomato to extras.

2006-08-06  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: gnome-pim has been moved to archive.

2006-08-04  Funda Wang  <fundawang@linux.net.cn>

	* translation-status.xml: more modules are moved to archive.
