@@ -1019,8 +1019,8 @@
     <version release="HEAD">
       <component name="glade3" dir="glade3" group="extras">
         <podir dir="po"/>
-        <potname name="glade-3.pot"/>
-        <branch name="HEAD"/>
+        <potname name="glade3.pot"/>
+        <branch name="glade3-3-0-branch"/>
         <regenerate/>
         <download/>
       </component>
@@ -1698,7 +1698,7 @@
       <component name="gnome-terminal" dir="gnome-terminal" group="desktop">
         <podir dir="po"/>
         <potname name="gnome-terminal.pot"/>
-        <branch name="HEAD"/>
+        <branch name="gnome-2.16"/>
         <regenerate/>
         <download/>
       </component>
