@@ -1,3 +1,7 @@
+2006-10-04  Abel Cheung  <abel@oaka.org>
+
+	* translation-status.xml: Set branch for gnome-terminal and glade3.
+
 2006-09-28  Wouter Bolsterlee  <wbolster@gnome.org>
 
 	* translation-status.xml: deskbar-applet branched.
